# tmux-router

./: .gitignore  Cargo.toml  README.md  VERSIONS.md  book.toml
.github/workflows/: book.yml  ci.yml  release.yml
docs/: SUMMARY.md  api-reference.md  concepts.md  getting-started.md  introduction.md  registry.md  sync-algorithm.md
ontology/: README.md
ontology/src/: layout.md  pane.md  reconcile.md  registry.md  session.md  stash.md  window.md
src/: lib.rs  main.rs  pane_policy.rs  registry.rs  sync.rs  tmux.rs
