[package]
name = "tmux-router"
version = "0.2.3"
edition = "2024"
description = "Declarative tmux pane routing — sync editor layouts to tmux"
license = "MIT"
repository = "https://github.com/btakita/tmux-router"
readme = "README.md"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fs2 = "0.4"

[dev-dependencies]
tempfile = "3"
proptest = "1"
