[package]
name = "tmux-router"
version = "0.3.1"
edition = "2024"
description = "Declarative tmux pane routing — sync editor layouts to tmux"
license = "MIT"
repository = "https://github.com/btakita/tmux-router"
readme = "README.md"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fs2 = "0.4"

[dev-dependencies]
existence = { path = "../existence-lang/existence" }
module-harness = { path = "../module-harness" }
proptest = "1"
tempfile = "3"
